--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=SistemaVentasLinox
 
 # URL de conexión
-spring.datasource.url=jdbc:mysql://localhost:3306/linox
+spring.datasource.url=jdbc:mysql://localhost:3310/linox
 
 # Credenciales
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=12345password
 
 # Driver JDBC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
