--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=SistemaVentasLinox
+server.port=8081
 
 # URL de conexión
-spring.datasource.url=jdbc:mysql://localhost:3310/linox
+spring.datasource.url=jdbc:mysql://localhost:3306/linox
 
 # Credenciales
 spring.datasource.username=root
-spring.datasource.password=12345password
+spring.datasource.password=Dominickmedina7
 
 # Driver JDBC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
