--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=SistemaVentasLinox
-server.port=8081
-
+servee.port=8081
 # URL de conexión
 spring.datasource.url=jdbc:mysql://localhost:3306/linox
 
