--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=SistemaVentasLinox
-servee.port=8081
+server.port=8081
 # URL de conexión
 spring.datasource.url=jdbc:mysql://localhost:3306/linox
 
