--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,10 @@
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
 			<artifactId>thymeleaf-layout-dialect</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity6</artifactId> <!-- o springsecurity5 según tu versión -->
+		</dependency>
 	</dependencies>
 
 	<build>
